# mai_cg_labs

./: .gitignore
lab_1/: CMakeLists.txt  README.md
lab_1/include/veekay/: graphics.hpp  input.hpp  veekay.hpp
lab_1/shaders/: shader.frag  shader.vert
lab_1/source/: input.cpp
lab_1/testbed/: main.cpp
lab_2/: CMakeLists.txt
lab_2/shaders/: shader.frag  shader.vert
lab_2/source/: veekay.cpp
lab_2/testbed/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt
lab_3/include/veekay/: application.hpp  types.hpp
lab_3/shaders/: shader.frag  shader.vert
lab_3/source/: graphics.cpp  veekay.cpp
lab_3/testbed/: CMakeLists.txt  main.cpp
lab_4/: CMakeLists.txt
lab_4/include/veekay/: application.hpp  graphics.hpp  input.hpp  types.hpp
lab_4/shaders/: shader.frag  shader.vert  shadow.vert
lab_4/source/: graphics.cpp  input.cpp  veekay.cpp
lab_4/testbed/: CMakeLists.txt  lab4.cpp  main.cpp
lab_4/testbed/doc/doc_lab4/: Lab #4_ Shadow mapping.txt  Lecture #8_ Shadowmapping.txt
